--- a/recom.html
+++ b/recom.html
@@ -45,10 +45,10 @@
                                 <a href="https://ege.sdamgia.ru/">Решу ЕГЭ</a>
                             </ol>
                             <ol>
-                                <a href="https://obrazovaka.ru/books">Краткое содержание</a>
+                                <a href="https://obrazovaka.ru/books">Кратк. сод.</a>
                             </ol>
                             <ol>
-                                <a href="https://biouroki.ru/workshop/crossgen.html">Кроссворд</a>
+                                <a href="https://biouroki.ru/workshop/crossgen.html">Кроcсвор</a>
                             </ol>
                         </ul>
                     </ol>
@@ -60,8 +60,8 @@
         </header>
         <content>
             <div class="content_recom">
-                <form action="{{ url_for('recom')}}", method="GET">
-                    <center><button type='recom'>Дай совет</button></center>
+                <form action="{{ url_for('recom_doing')}}", method="GET">
+                    <center><button type='recom_doing'>Дай совет</button></center>
                     <p>{{ help }}</p>
                 </form>
             </div>
