--- a/timetable.html
+++ b/timetable.html
@@ -45,10 +45,10 @@
                                 <a href="https://ege.sdamgia.ru/">Решу ЕГЭ</a>
                             </ol>
                             <ol>
-                                <a href="https://obrazovaka.ru/books">Краткое содержание</a>
+                                <a href="https://obrazovaka.ru/books">Кратк. сод.</a>
                             </ol>
                             <ol>
-                                <a href="https://biouroki.ru/workshop/crossgen.html">Кроссворд</a>
+                                <a href="https://biouroki.ru/workshop/crossgen.html">Кроcсвор</a>
                             </ol>
                         </ul>
                     </ol>
@@ -169,8 +169,8 @@
                 </button>
                 <hr>
                 <h3>Месяц Число</h3>
-                <p class="error">Неверно записаны данные. Внимательно прочитайте инструкцию.</p>
-                <p class="complete">Данные успешно сохранены</p>
+                <p class="error"><!--Неверно записаны данные. Внимательно прочитайте инструкцию.--></p>
+                <p class="complete"><!--Данные успешно сохранены--></p>
                 <div class="timetable_main">
                     <div class="timetable_week">
                         <p>ПН</p><p>ВТ</p><p>СР</p><p>ЧТ</p>
